feat: env added

--- a/src/processes/Processes.Worker/appsettings.json
+++ b/src/processes/Processes.Worker/appsettings.json
@@ -44,7 +44,9 @@
     "ClientSecret": "",
     "TokenAddress": "",
     "BaseUrl": "",
-    "GrantType": ""
+    "GrantType": "",
+    "IssuerDid": "",
+    "IssuerName": ""
   },
   "Callback": {
     "Username": "",
