--- a/src/processes/Processes.Worker/appsettings.json
+++ b/src/processes/Processes.Worker/appsettings.json
@@ -34,7 +34,9 @@
         "PaddingMode": ""
       }
     ],
-    "StatusListType": ""
+    "StatusListType": "",
+    "IssuerDid": "",
+    "IssuerName": ""
   },
   "Processes": {
     "LockExpirySeconds": 300
@@ -44,9 +46,7 @@
     "ClientSecret": "",
     "TokenAddress": "",
     "BaseUrl": "",
-    "GrantType": "",
-    "IssuerDid": "",
-    "IssuerName": ""
+    "GrantType": ""
   },
   "Callback": {
     "Username": "",
