feat: case change

--- a/charts/dim/values.yaml
+++ b/charts/dim/values.yaml
@@ -88,8 +88,8 @@ processesworker:
     # -- Sets the type of the status list which will be created for the issuer wallet
     # -- valid types are:  StatusList2021, BitstringStatusList
     statusListType: "StatusList2021"
-    IssuerDid: ""
-    IssuerName: ""
+    issuerDid: ""
+    issuerName: ""
   provisioning:
     clientId: ""
     clientSecret: ""
